--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -125,15 +125,15 @@
     "class FNN(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(FNN, self).__init__()\n",
-    "        self.fc1 = nn.Linear(28 * 28, 128)  # 28x28 input size (MNIST images are 28x28), 128 hidden units\n",
-    "        self.fc2 = nn.Linear(128, 64)       # 128 hidden units, 64 hidden units\n",
-    "        self.fc3 = nn.Linear(64, 10)        # 64 hidden units, 10 output classes (for digits 0-9)\n",
+    "        self.fc1 = nn.Linear(28 * 28, 128)  \n",
+    "        self.fc2 = nn.Linear(128, 64)       \n",
+    "        self.fc3 = nn.Linear(64, 10)        \n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x.view(-1, 28 * 28)  # Flatten the input image\n",
-    "        x = torch.relu(self.fc1(x))  # ReLU activation function for hidden layer 1\n",
-    "        x = torch.relu(self.fc2(x))  # ReLU activation function for hidden layer 2\n",
-    "        x = self.fc3(x)  # Output layer, no activation function (will be applied later)\n",
+    "        x = x.view(-1, 28 * 28)  \n",
+    "        x = torch.relu(self.fc1(x))  \n",
+    "        x = torch.relu(self.fc2(x))  \n",
+    "        x = self.fc3(x)  \n",
     "        return F.softmax(x, dim=1)\n"
    ]
   },
